# gitai

./: .gitignore  AGENTS.md  CHANGELOG.md  COUPLING_ANALYSIS.md  Cargo.toml  GEMINI.md  README.md  test_gitignore.rs
.github/workflows/: ci.yml  code-quality.yml  flow-CI.yml  gitai.yml  release.yml  rust.yml  wire-CI.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
crates/changelog/: Cargo.toml
crates/changelog/src/: change_log.rs  lib.rs  main.rs  prompt.rs
crates/changelog/tests/: changelog_tests.rs
crates/claw-changelog/: Cargo.toml
crates/claw-changelog/src/: main.rs
crates/claw-core/: Cargo.toml
crates/claw-core/src/: common.rs  lib.rs
crates/claw-core/src/app/: args.rs  handlers.rs
crates/claw-core/src/commands/changelog/: change_analyzer.rs  cli.rs  engine.rs  mod.rs  models.rs  prompt.rs  releasenotes.rs
crates/claw-core/src/commands/commit/: cli.rs  completion.rs  mod.rs  prompt.rs  prompt_helpers.rs  service.rs  strategy.rs  types.rs
crates/claw-core/src/commands/common/: service.rs  spinner.rs
crates/claw-core/src/git/: commit.rs  history.rs  mod.rs  repository.rs
crates/claw-core/src/llm/: engine.rs  mod.rs
crates/claw-core/src/llm/prompt/: builder.rs  sections.rs
crates/claw-core/src/output/: formatting.rs
crates/claw-core/src/sync/cache/: metadata.rs
crates/claw-core/src/sync/common/: fetch.rs  mod.rs  parse.rs  sequence.rs
crates/claw-core/src/sync/wire/: check.rs  mod.rs  operation.rs
crates/claw-core/src/tui/: coordinator.rs  input.rs  renderer.rs  spinner.rs  state.rs
crates/claw-message/: Cargo.toml
crates/claw-message/src/: lib.rs  main.rs
crates/claw-message/tests/: args.rs
crates/claw-notes/: Cargo.toml
crates/claw-notes/src/: main.rs
crates/claw-pr/: Cargo.toml
crates/claw-wire/: Cargo.toml
crates/claw-wire/src/: main.rs
crates/cloy/: Cargo.toml
crates/message/: Cargo.toml
crates/message/src/: lib.rs  main.rs
crates/message/tests/: args.rs  integration.rs
crates/notes/: Cargo.toml
crates/notes/src/: lib.rs  main.rs  models.rs  notes.rs  prompt.rs
crates/pr/: Cargo.toml
crates/pr/src/: lib.rs  main.rs  models.rs  pr.rs  prompt.rs
crates/prompts/: Cargo.toml
crates/prompts/src/: builder.rs  changelog.rs  commit.rs  mod.rs  notes.rs  pr.rs  sections.rs
crates/prompts/tests/: test.rs
crates/wire/: Cargo.toml
crates/wire/.github/workflows/: rust.yml
crates/wire/benches/: cache_benchmark.rs
crates/wire/src/: lib.rs  main.rs  sync_wire.rs
crates/wire/src/cache/: fetcher.rs
crates/wire/src/sync/cache/: lock.rs  manager.rs  metadata.rs
crates/wire/src/sync/common/: fetch.rs  parse.rs  sequence.rs
crates/wire/src/sync/models/: repo_config.rs
crates/wire/src/sync/wire/: check.rs  operation.rs
crates/wire/tests/: test_concurrent_access.rs  test_end_to_end.rs  test_repo_cache.rs  test_sync_performance.rs
docs/: 0001-libgit2-over-gitoxide.md  0002-config-layering.md  0003-tui-over-gui.md  0005-model-info-caching.md
docs/adr/: 0004-provider-enum-dispatch.md  README.md
src/: app.rs  cli.rs  commands.rs  common.rs  config.rs  emoji.rs  instruction_presets.rs  lib.rs  llm.rs  logger.rs  main.rs  messages.rs  token_optimizer.rs  ui.rs
src/analyzer/: c.rs  cpp.rs  gradle.rs  java.rs  javascript.rs  json.rs  kotlin.rs  markdown.rs  mod.rs  python.rs  rust.rs  text.rs  toml.rs  yaml.rs
src/app/: args.rs  handlers.rs  mod.rs
src/changes/: changelog.rs  models.rs  prompt.rs
src/cli/: args.rs  handlers.rs  mod.rs
src/commands/: mod.rs
src/commit/: cli.rs  prompt.rs  review.rs  service.rs
src/core/: context.rs  llm.rs  mod.rs  model_info.rs  token_optimizer.rs
src/features/: mod.rs  rebase.rs
src/file_analyzers/: json.rs  mod.rs
src/git/: commit.rs  files.rs  history.rs  hooks.rs  ignore_matcher.rs  metadata.rs  mod.rs  repository.rs  utils.rs
src/llm/: engine.rs  messages.rs  mod.rs  model_info.rs  provider.rs
src/mcp/: server.rs
src/output/: mod.rs
src/remote/: check.rs  sync.rs
src/sync/: check.rs  mod.rs  operation.rs
src/tui/: app.rs  coordinator.rs  input_handler.rs  mod.rs  rebase.rs  runtime.rs  spinner.rs  state.rs  task_runner.rs  theme.rs  ui.rs
src/wire/: check.rs  mod.rs  sync.rs
templates/: commit_system.hbs  commit_user.hbs
tests/: basic_git_operations_tests.rs  binary_detection_tests.rs  branch_comparisons_tests.rs  branch_error_quality_tests.rs  branch_fallback_tests.rs  branch_resolution_tests.rs  changelog_integration_tests.rs  changelog_prompts_tests.rs  changelog_tests.rs  commit_prompts_tests.rs  common_params_tests.rs  completion_tests.rs  concurrent_access_tests.rs  config_tests.rs  end_to_end_tests.rs  error_quality_tests.rs  feature_intent_tests.rs  file_analyzers_tests.rs  file_exclusions_tests.rs  file_status_edge_tests.rs  git_tag_tests.rs  gitmoji_tests.rs  gitwire_config_tests.rs  lib.rs  llm_tests.rs  mcp_tests.rs  pr_tests.rs  prompt_tests.rs  regression_tests.rs  remote_git_repositories_tests.rs  remote_repository_integration_tests.rs  remote_tracking_branch_tests.rs  review_tests.rs  service_tests.rs  test_cached_repo.rs  test_concurrent_access.rs  test_end_to_end.rs  test_repo_cache.rs  test_repo_config.rs  test_sync_performance.rs  (+6 more)
tests/exploratory/: edge_case_tests.rs  mod.rs  recovery_tests.rs  side_effect_tests.rs
tests/features/: changelog_integration_tests.rs  changelog_prompts_tests.rs  changelog_tests.rs  mod.rs  pr_tests.rs  project_metadata_tests.rs  prompt_tests.rs
tests/git/: basic_git_operations_tests.rs  branch_comparisons_tests.rs  branch_error_quality_tests.rs  branch_fallback_tests.rs  branch_resolution_tests.rs  file_exclusions_tests.rs  file_status_edge_tests.rs  git_hooks_tests.rs  git_tag_tests.rs  mod.rs  remote_git_repositories_tests.rs  remote_tracking_branch_tests.rs
tests/llm/: commit_prompts_tests.rs  completion_tests.rs  llm_tests.rs  mod.rs  output_quality_tests.rs
tests/sync/: cached_repo_tests.rs  gitwire_config_tests.rs  gitwire_save_tests.rs  mod.rs  repo_config_tests.rs  sync_performance_tests.rs  (+1 more)
(+113 files in other folders)
