[workspace]
resolver = "3"
members = [
    "crates/claw-core",
    "crates/message",
    "crates/notes",
    "crates/pr",
    "crates/changelog",
    "crates/wire",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Abdulwahab"]

[workspace.dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
colored = "3.0.0"
console = "0.16.1"
crossterm = { version = "0.28.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.30"
git2 = { version = "0.20.1", features = ["vendored-openssl", "vendored-libgit2"] }
llm = "1.3.4"
log = "0.4.27"
parking_lot = "0.12.5"
rand = "0.10.0"
ratatui = "0.29.0"
regex = "1.10.6"
reqwest = { version = "0.13.2", features = ["json", "native-tls-vendored"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.127"
tempfile = "3.19.1"
textwrap = "0.16.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-retry = "0.3.0"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"
url = "2.5.0"
cause = "0.1.2"
temp-dir = "0.2.0"
fs_extra = "1.3.0"
folder_compare = "0.4.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = { level = "allow", priority = 1 }
mismatched_lifetime_syntaxes = "warn"
unused_visibilities = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
style = { level = "warn", priority = 1 }
perf = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = 10 }
missing_errors_doc = { level = "allow", priority = 20 }
missing_panics_doc = { level = "allow", priority = 20 }
missing_safety_doc = { level = "allow", priority = 20 }
module_name_repetitions = { level = "allow", priority = 21 }
significant_drop_tightening = { level = "allow", priority = 21 }
must_use_candidate = { level = "allow", priority = 21 }
cast_precision_loss = { level = "warn", priority = 22 }
cast_possible_truncation = { level = "warn", priority = 22 }
cast_sign_loss = { level = "warn", priority = 22 }
as_conversions = { level = "warn", priority = 22 }
out_of_bounds_indexing = { level = "deny", priority = 30 }
enum_glob_use = { level = "deny", priority = 30 }
unwrap_used = { level = "deny", priority = 30 }
undocumented_unsafe_blocks = { level = "deny", priority = 30 }
dbg_macro = { level = "warn", priority = 31 }
todo = { level = "warn", priority = 31 }
future_not_send = { level = "warn", priority = 32 }
async_yields_async = { level = "warn", priority = 32 }
implicit_clone = { level = "warn", priority = 33 }
inefficient_to_string = { level = "warn", priority = 33 }
string_lit_as_bytes = { level = "warn", priority = 33 }
too_many_lines = { level = "warn", priority = 34 }
cognitive_complexity = { level = "warn", priority = 34 }
result_large_err = { level = "warn", priority = 35 }
