[package]
name = "cloy-changelog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "changelog"
path = "src/lib.rs"

[[bin]]
name = "git-changelog"
path = "src/main.rs"

[dependencies]
cloy = { path = "../cloy" }
cloy-prompts = { path = "../prompts" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
log.workspace = true
regex.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
