[package]
name = "claw-notes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "git-notes"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../claw-core" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true

[lints]
workspace = true
