[package]
name = "claw-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "git-wire"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../claw-core" }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true

[lints]
workspace = true
