[package]
name = "claw-message"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "message"
path = "src/lib.rs"

[[bin]]
name = "git-message"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../claw-core" }
anyhow.workspace = true
clap.workspace = true
log.workspace = true
tokio.workspace = true

[dev-dependencies]
git2.workspace = true
tempfile.workspace = true

[lints]
workspace = true
