[package]
name = "cloy-notes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "notes"
path = "src/lib.rs"

[[bin]]
name = "git-notes"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../claw-core" }
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
