[package]
name = "cloy-pr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "git-pr"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../claw-core" }
cloy-prompts = { path = "../prompts" }
anyhow.workspace = true
clap.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
colored.workspace = true

[lints]
workspace = true
