[package]
name = "cloy-prompts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "prompts"
path = "src/mod.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
